Link correction to align correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,11 @@ blockquote{
     color:rgb(255, 255, 255, 1);
 }
 
+.link-fix{
+      position:absolute;
+      margin-top:-7rem;
+}
+
 /*FOOTER*/
 
 .footer{
